# lab2_shell

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: .history  constants.py  history.py  main.py
src/commands/: __init__.py  filesystem.py  grep.py  info.py  tar_archives.py  undo.py  viewer.py  zip_archives.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py  test_archives.py  test_filesystem.py  test_grep.py  test_info.py  test_undo.py  test_view.py
